[gd_scene load_steps=4 format=3 uid="uid://dyceqe6fqfty1"]

[ext_resource type="Script" uid="uid://b6gwmaff8lfw7" path="res://game/entities/asteroids/weapon_pickup.gd" id="1_0reak"]
[ext_resource type="Texture2D" uid="uid://dlqd1nlksxyg5" path="res://assets/sprites/enemies/testboss2.png" id="2_8i8db"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qjt78"]
radius = 101.0198

[node name="weapon_pickup" type="Area2D"]
script = ExtResource("1_0reak")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.31294736, 0.31294736)
shape = SubResource("CircleShape2D_qjt78")

[node name="weapon_sprite" type="Sprite2D" parent="."]
position = Vector2(-7, 1)
scale = Vector2(0.37628663, 0.37628663)
texture = ExtResource("2_8i8db")

[node name="despawn_timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="despawn_timer" to="." method="_on_despawn_timer_timeout"]
